# artist

./: .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  README.md  pyproject.toml
artist/: artist.py  graphviz.py  graphviz_simple.py  mermaid.py  mrf.py  pyinstaller.py  wireviz.py  wirevizData.py
graphviz_embedded/: dot
src/: artist.py  data.py  graphvizData.py  mermaid.py  mrf.py  wirevizData.py
tests/: listExample  listExample.toml  listExample.yaml  tuto.bom.tsv  tuto.html  tuto.yml
